# tictactoeAI

./: README.md  pyproject.toml
notebooks/: xo_game.ipynb
src/: main.py
