[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Guy Montag <guy_montag@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
